--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
 	"homepage": "https://github.com/ahmad-tantawy/Note-app#readme",
 	"devDependencies": {
 		"eslint": "^8.57.0",
+		"eslint-config-standard": "^17.1.0",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-n": "^16.6.2",
+		"eslint-plugin-promise": "^6.1.1",
 		"sass": "^1.72.0",
-		"vite": "^5.1.6"
+		"vite": "^5.2.8"
 	}
 }
